# MLDL-HW3

./: README.md  pyproject.toml
notebooks/: feature-engineering.ipynb  hyperparameter-tuning.ipynb  models.ipynb  preprocessing.ipynb
notebooks/artifacts/catboost/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/artifacts/catboost/learn/: events.out.tfevents
notebooks/artifacts/experiment-results/: age_new_price_interaction.csv  bin-seats.csv  brand-model-name-te.csv  brand-model-te.csv  brand_engine_interaction.csv  brand_power_interaction.csv  cat-boost.csv  clipping-extreme-Kilometers_Driven.csv  clipping-extreme-mileage.csv  combine-all-feature-by-feature-engineering.csv  drop-model.csv  drop-name.csv  extract-brand-model.csv  grid-search-tuning.csv  grouping-infrequent-fuel-type.csv  location target encoding.csv  model-premium.csv  model-te.csv  model_power_interaction.csv  name, location best feature engineering.csv  name-location-year-engineered.csv  ontology-based-engineering.csv  power-imputation.csv  random-forest.csv  transform-price.csv  xg-boost.csv  year-to-age-transform.csv
src/mldl_hw3/: consts.py  experiment.py  feature_engineering.py  preprocessing.py
src/mldl_hw3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
writeup/: mldl-hw3-20235073.tex  reference.bib
