[project]
name = "mldl_hw3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.8",
    "category-encoders>=2.8.1",
    "ipykernel>=7.1.0",
    "kaggle>=1.7.4.5",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "nbconvert>=7.16.6",
    "ruff>=0.14.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
